# simonaMarkovLoad

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yml  constant_loads.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
data/raw/: dummy.csv
scripts/: setup_env.py
src/: config.py  export.py  main.py
src/markov/: __init__.py  _core.py  buckets.py  gmm.py  model.py  plothelper.py  postprocess.py  transition_counts.py  transitions.py  transmats.py
src/preprocessing/: bucketing.py  constant_loads.py  loader.py  scaling.py
tests/: conftest.py  test_buckets.py  test_constant_loads.py  test_export.py  test_gmm.py  test_loader.py  test_main.py  test_scaling.py  test_schema_like.py  test_sim_sampling.py  test_transition_counts.py  test_transitions.py
