[project]
name = "simona-markov-load"
version = "0.1.0"
description = "Synthetic household load profiles for Simona"
authors = [
    {name = "Philipp Schmelter",email = "philipp.schmelter@tu-dortmund.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.6"
pre-commit = "^4.4.0"
pytest = "^8.4.2"

[[tool.poetry.packages]]
include = "scripts"

[tool.poetry.scripts]
setup = "scripts.setup_env:main"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE", "SIM", "RET"]
ignore = ["E501"]  # Line too long (handled by formatter)

