[project]
name = "simona-markov-load"
version = "0.1.0"
description = "Synthetic household load profiles for Simona"
authors = [{ name = "Philipp Schmelter", email = "philipp.schmelter@tu-dortmund.de" }]
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "pandas>=3.0.3,<4.0.0",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.11.1,<4.0.0)",
    "tqdm (>=4.69.0,<5.0.0)",
    "pandas-stubs~=3.0.3",
]

[project.scripts]
setup = "scripts.setup_env:main"

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1,<27",
    "isort>=8.0.1,<9",
    "ruff>=0.15.22,<0.16",
    "pre-commit>=4.6.1,<5",
    "pytest>=9.0.3,<10",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["src", "scripts"]
module-root = ""
namespace = true

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE", "SIM", "RET"]
ignore = ["E501"]  # Line too long (handled by formatter)
